base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juice-shop-service
  name: juice-shop-service
spec:
  ports:
  - name: "3000"
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: juice-shop
  type: ClusterIP
