base/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-my-webserver
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: juice-shop
  egress:
  ingress:
  - from:     
    - ipBlock:
        cidr: 192.168.0.0/16
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    ports:
    - protocol: TCP
      port: 3000
